<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrentinoGrotte</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="refresh">Refresh</string>
    <string name="loading">Loading&#8230;</string>
    <string name="clear">Clear</string>
    <string name="title_activity_cave_details">CaveDetails</string>
    <string name="cave_id">cave id</string>
    <string name="latitude">latitudine</string>
    <string name="longitude">longitudine</string>
    <string name="name">nome</string>
    <string name="title_activity_caves_map">CavesMap</string>
    <string name="map">Google Map</string>
    <string name="osm">Open Street Map</string>
    <string name="title_activity_osm__map">Osm_Map</string>
    <string name="visited">visited</string>
    <string name="caveList">Caves List</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="to_list">Caves Lits</string>
    <string name="toGMap">Google Maps</string>
    <string name="osMap">Open Street Map</string>
    <string name="show_on_map">show on map</string>
    <string name="routing">routing</string>
    <string name="chek"></string>
    <string name="input">Find by Address</string>
    <string name="text_here">Text Here</string>
    <string name="conferma">Find!</string>
    <string name="vuota"></string>
    <string name="title_activity_istructions">IstructionsActivity</string>

</resources>